instance1/temp-retrieve/objects/API_Parameter__mdt/fields/Do_Not_Auto_Map__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Auto_Map__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Auto-Map</label>
    <type>Checkbox</type>
</CustomField>