instance1/temp-retrieve/objects/API_Parameter__mdt/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>path</fullName>
                <default>true</default>
                <label>path</label>
            </value>
            <value>
                <fullName>query</fullName>
            </value>
            <value>
                <fullName>header</fullName>
            </value>
            <value>
                <fullName>body</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>